# slambench

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  alloc_no_metric.txt  alloc_track.txt  aloc_Gt_event_process.txt  aloc_ICL.txt  aloc_nonGt.txt  aloc_snap.txt  conf1  dso_output.txt  enhance_config.json  enhance_config_new.json  entry.py  events.txt  events_UZH.txt  events_UZH2.txt  failed_build.txt  frames.txt  grep  image_metrics_test.txt  img.txt  log.txt  log_file.txt  lsd-fix.txt  lsd-fix2.txt  lsd-non-fix.txt  lsdslam.txt  massif.out.1116  massif.out.12383  massif.out.1908  massif.out.21055  massif.out.28495  massif.out.28693  massif.out.2887  massif.out.2998  massif.out.32579  massif.out.471  (+12 more)
benchmarks/lsdslam/: CMakeLists.txt
benchmarks/slam-eds/: CMakeLists.txt
benchmarks/slam-eds/src/orig/: CMakeCache.txt  CMakeLists.txt  config.yaml  slam_eds_library.cpp
benchmarks/slam-eds/src/orig/tasks/: Task.cpp  Task.hpp
benchmarks/test_algo/: CMakeLists.txt
benchmarks/test_algo/src/cpp/: CMakeLists.txt  test_library.cpp
benchmarks/test_event/: CMakeLists.txt
benchmarks/test_event/src/cpp/: CMakeCache.txt  CMakeLists.txt  event_library.cpp
docker/algorithms/aloam/: Dockerfile
docker/algorithms/floam/: Dockerfile
docker/algorithms/kfusion/: Dockerfile
docker/algorithms/legoloam/: Dockerfile
docker/algorithms/loam/: Dockerfile
docker/algorithms/lsdslam/: Dockerfile
docker/algorithms/openvins/: Dockerfile
docker/algorithms/orbslam2/: Dockerfile
docker/algorithms/orbslam3/: Dockerfile
framework/makefiles/: benchmarks.makefile  eigen3.make  flann.make  opencv.make  pangolin.make  pcl.make
framework/shared/: CMakeLists.txt
framework/shared/include/: SLAMBenchConfiguration.h  SLAMBenchLibraryHelper.h  TimeStamp.h
framework/shared/include/io/: Event.h  SLAMFrame.h
framework/shared/include/io/sensor/: CameraSensor.h  DepthSensor.h  Sensor.h
framework/shared/include/metrics/: ImageMetric.h
framework/shared/include/outputs/: TrajectoryInterface.h
framework/shared/include/values/: Value.h
framework/shared/src/: SLAMBenchConfiguration.cpp
framework/shared/src/io/: Event.cpp  SLAMFrame.cpp
framework/shared/src/io/sensor/: CameraSensor.cpp  DepthSensor.cpp  Sensor.cpp
framework/shared/src/metrics/: ATEMetric.cpp  DurationMetric.cpp  ImageMetric.cpp  MetricManager.cpp  RPEMetric.cpp
framework/shared/src/outputs/: Output.cpp  TrajectoryInterface.cpp
framework/shared/src/values/: Value.cpp
framework/tools/: CMakeLists.txt
framework/tools/dataset-tools/: CMakeLists.txt  DARPASubt.cpp  General.cpp  KITTI.cpp  UZHFPV.cpp  dataset-generator.cpp
framework/tools/dataset-tools/include/: DARPASubt.h  General.h  UZHFPV.h
framework/tools/loaders/: slambench_app.cpp
logs/: calibLog.txt  coarseTrackingLog.txt  numsLog.txt
scripts/: algorithm-vol.sh  visualise_bracket_data.py  visualize.py
scripts/experiment/: overhead-exp-run.sh  overhead-exp-setup.sh  run_exp.py  run_exp_multiproces.py  visualise_data.py
scripts/image_bounds/: bounds.py
